--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -5,8 +5,8 @@ jobs:
   testing:
     name: Staging Testing
     runs-on: ubuntu-latest
-    # container:
-    #   image: ruby:3.0.4
+    container:
+      image: ruby:3.0.4
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
