--- a/.github/workflows/ci-cd-staging.yml
+++ b/.github/workflows/ci-cd-staging.yml
@@ -9,3 +9,7 @@ jobs:
   testing:
     name: Staging - Testing
     uses: ./.github/workflows/ci-testing.yml
+
+  build-and-push:
+    name: Staging - Artifact Registry GCP
+    uses: ./.github/workflows/ci-gcp-artifact-registry.yml
