--- a/.github/workflows/ci-gcp-artifact-registry.yml
+++ b/.github/workflows/ci-gcp-artifact-registry.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Authorize push to Google Cloud Artifact Registry
         run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
-      - name: Build Docker Image
-        run: docker build -t yorch-financial-staging:latest .
-
-      - name: Tag Docker Image
-        run: docker tag yorch-financial-staging:latest us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
