--- a/.github/workflows/ci-gcp-artifact-registry.yml
+++ b/.github/workflows/ci-gcp-artifact-registry.yml
@@ -17,6 +17,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2.2.1
+        with:
+          version: v0.9.1
+
       - name: Authenticate to Google Cloud
         id: auth
         uses: google-github-actions/auth@v0.4.0
@@ -30,8 +36,21 @@ jobs:
       - name: Authorize push to Google Cloud Artifact Registry
         run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
+      - name: Build Docker Image
+        run: docker build -t yorch-financial-staging:latest .
+
+      - name: Tag Docker Image
+        run: docker tag yorch-financial-staging:latest us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
+
+
+      # - name: Build and push
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     push: true
+      #     tags: us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
+
+      # - name: Set up Docker Buildx
+      #   id: buildx
+      #   uses: docker/setup-buildx-action@v2.2.1
+      #   with:
+      #     version: v0.9.1
