--- a/.github/workflows/ci-gcp-artifact-registry.yml
+++ b/.github/workflows/ci-gcp-artifact-registry.yml
@@ -37,10 +37,7 @@ jobs:
         run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
       - name: Build Docker Image
-        run: docker build -t yorch-financial-staging:latest .
-
-      - name: Tag Docker Image
-        run: docker tag yorch-financial-staging:latest us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
+        run: docker build . --tag us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
 
 
       # - name: Build and push
