--- a/.github/workflows/ci-gcp-artifact-registry.yml
+++ b/.github/workflows/ci-gcp-artifact-registry.yml
@@ -11,8 +11,6 @@ jobs:
   build-and-push:
     name: Artifact Registry - GCP
     runs-on: ubuntu-latest
-    container:
-      image: ruby:3.0.4
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -37,8 +35,7 @@ jobs:
         run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
       - name: Build Docker Image
-        run: docker build . --tag us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
-
+        run: docker build -t s-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest .
 
       # - name: Build and push
       #   uses: docker/build-push-action@v4
