--- a/.github/workflows/ci-gcp-artifact-registry.yml
+++ b/.github/workflows/ci-gcp-artifact-registry.yml
@@ -35,7 +35,10 @@ jobs:
         run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
       - name: Build Docker Image
-        run: docker build -t s-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest .
+        run: docker build -t us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest .
+
+      - name: Push Docker Image
+        run: docker push us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest
 
       # - name: Build and push
       #   uses: docker/build-push-action@v4
