--- a/.github/workflows/gcp-deployment.yml
+++ b/.github/workflows/gcp-deployment.yml
@@ -45,4 +45,5 @@ jobs:
           gcloud run deploy yorch-financial-staging \
           --image us-central1-docker.pkg.dev/yorch-financial/yorch-financial/yorch-financial-staging:latest \
           --allow-unauthenticated \
+          --port 3000 \
           --region us-central1
